main.tf
provider "aws" {
region = "ap-south-1"
}

resource "aws_security_group" "jenkins_sg" {
name = "jenkins-sg"

ingress {
from_port   = 22
to_port     = 22
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
from_port   = 8080
to_port     = 8080
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
}

resource "aws_instance" "jenkins_server" {
  ami                    = "ami-0f58b397bc5c1f2e8"
  instance_type          = "t2.micro"
  key_name               = "healthcare-key"
  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]

tags = {
Name = "terraform-jenkins-server"
}
}

output "jenkins_public_ip" {
value = aws_instance.jenkins_server.public_ip
}
